pod-security/restricted/require-run-as-nonroot/.kyverno-test/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-run-as-nonroot
policies:
  - ../require-run-as-nonroot.yaml
resources:
  - resource.yaml
results:
  - kind: CronJob
    policy: require-run-as-nonroot
    resources:
      - badcronjob01
      - badcronjob02
      - badcronjob03
      - badcronjob04
      - badcronjob05
      - badcronjob06
      - badcronjob07
      - badcronjob08
      - badcronjob09
      - badcronjob10
      - badcronjob11
      - badcronjob12
      - badcronjob13
      - badcronjob14
      - badcronjob15
    result: fail
    rule: run-as-non-root
  - kind: Deployment
    policy: require-run-as-nonroot
    resources:
      - baddeployment01
      - baddeployment02
      - baddeployment03
      - baddeployment04
      - baddeployment05
      - baddeployment06
      - baddeployment07
      - baddeployment08
      - baddeployment09
      - baddeployment10
      - baddeployment11
      - baddeployment12
      - baddeployment13
      - baddeployment14
      - baddeployment15
    result: fail
    rule: run-as-non-root
  - kind: Pod
    policy: require-run-as-nonroot
    resources:
      - badpod01
      - badpod02
      - badpod03
      - badpod04
      - badpod05
      - badpod06
      - badpod07
      - badpod08
      - badpod09
      - badpod10
      - badpod11
      - badpod12
      - badpod13
      - badpod14
      - badpod15
      - badpod16
    result: fail
    rule: run-as-non-root
  - kind: CronJob
    policy: require-run-as-nonroot
    resources:
      - goodcronjob01
      - goodcronjob02
      - goodcronjob03
      - goodcronjob04
      - goodcronjob05
      - goodcronjob06
      - goodcronjob07
      - goodcronjob08
      - goodcronjob09
      - goodcronjob10
    result: pass
    rule: run-as-non-root
  - kind: Deployment
    policy: require-run-as-nonroot
    resources:
      - gooddeployment01
      - gooddeployment02
      - gooddeployment03
      - gooddeployment04
      - gooddeployment05
      - gooddeployment06
      - gooddeployment07
      - gooddeployment08
      - gooddeployment09
      - gooddeployment10
    result: pass
    rule: run-as-non-root
  - kind: Pod
    policy: require-run-as-nonroot
    resources:
      - goodpod01
      - goodpod02
      - goodpod03
      - goodpod04
      - goodpod05
      - goodpod06
      - goodpod07
      - goodpod08
      - goodpod09
      - goodpod10
    result: pass
    rule: run-as-non-root
